--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "limg-core"
 version = "0.1.0"
-authors = ["limg-projects <limg.github@gmail.com>"]
 edition = "2024"
 license = "MIT"
+
+description = "no_std limg core package"
+readme = "README.md"
+repository = "https://github.com/limg-projects/limg-core-rs"
+publish = false
