--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Extract crate version
         id: crate-version
-        run: echo "CRATE_VERSION=$(cargo pkgid | sed 's/.*#//')" >> "$GITHUB_OUTPUT"
+        run: echo "CRATE_VERSION=$(cargo pkgid | sed 's/.*@//')" >> "$GITHUB_OUTPUT"
       - name: Generate documentation
         run: cargo doc --no-deps
       - name: Prepare directory
